[package]
name = "rust_radio"
version = "1.0.3"
authors = ["Pat Laster <palaster307@gmail.com>"]
description = """
Radio Rust is minimalist rust based Internet Radio Player using eframe, Reqwest, and Rodio
"""
documentation = "https://github.com/palaster/rust_radio"
homepage = "https://github.com/palaster/rust_radio"
repository = "https://github.com/palaster/rust_radio"
edition = "2021"
readme = "README.md"
keywords = ["audio", "internet-radio"]
categories = ["multimedia::audio"]
license = "AGPL-3.0"
exclude = ["screenshots/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
pls = "0.2.2"
once_cell = "1.20.2"
reqwest = "0.12.8"
tokio = { version = "1.41.0", features = ["full"] }
rodio = { version = "0.19.0", default-features = false, features = ["symphonia-mp3"] }
eframe = "0.29.1"
